# nishi_proarch

proarch/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Dockerfile.frontend  Makefile  README.md  check_db.py  check_db_detailed.py  display_evaluation_results.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  evaluate_rag.py  frontend.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_ingestion.py  run_ingestion_fixed.py  run_tests.py  test_observability.py  test_runner.py  verify_observability.py
proarch/.github/workflows/: ci.yml
proarch/data/evaluation/: test_set.json
proarch/data/reference/: aws_cost_optimization.txt  cloud_cost_and_tagging.txt
proarch/src/ai/: embeddings.py  qa_chain.py  retriever.py
proarch/src/api/: dependencies.py  main.py  routes.py
proarch/src/ingestion/: __init__.py  database_operations.py  loader.py  metrics.py  parsers.py  quality_checks.py  schema.py  transformers.py
proarch/src/recommendations/: __init__.py  recommendations.py
proarch/src/transformations/: __init__.py  aggregations.py  anomalies.py  kpis.py
proarch/tests/: conftest.py  test_api.py  test_etl.py  test_kpi.py  test_retriever.py
